--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,15 +20,10 @@ jobs:
         distribution: 'temurin'
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    - name: Build with Gradle Wrapper
-      run: bash ./gradlew dockerBuildNative
-    - name: Tag the image
-      run: docker tag hello-test1:latest mionita1980/hello-test1:latest
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Push the Docker image
-      run: |
-        docker push mionita1980/hello-test1:latest
+    - name: Build with Gradle Wrapper
+      run: bash ./gradlew dockerPushNative
